--- a/config/locales/fra/help/postal_zones-index.txt
+++ b/config/locales/fra/help/postal_zones-index.txt
@@ -4,7 +4,7 @@
 Une zone postale est l'assemblage d'un code postal et d'une ville. L'utilisation de la paire (plutôt que séparément) facilite les recherches.
 
 ===== Utilisation =====
-Ici, vous pouvez [[>backend/areas#new|créer]], modifier {{icon:edit}} ou même supprimer {{icon:destroy}} des zones postales.
+Ici, vous pouvez [[>backend/postal_zones#new|créer]], modifier {{icon:edit}} ou même supprimer {{icon:destroy}} des zones postales.
 De même, vous disposez d'un système de recherche classique pour filtrer la zone postale qui vous intéresse.
 
 >>> Les zones postales sont créées par défaut automatiquement lors des enregistrement d'adresse. 
