--- a/config/locales/eng/enumerize.yml
+++ b/config/locales/eng/enumerize.yml
@@ -15,11 +15,11 @@ eng:
     animal: #?
     animal_group: #?
     animal_medicine: #?
-    asset:
-      depreciation_method:
-        graduated: "Graduated"
-        linear: "Linear"
-        simplified_linear: "Simplified linear"
+    asset:  #?
+      depreciation_method: #?
+        graduated: "Graduated" #?
+        linear: "Linear" #?
+        simplified_linear: "Simplified linear" #?
     cash:
       mode:
         bban: "Basic Bank Account Number (BBAN)"
@@ -106,6 +106,11 @@ eng:
         purchase: "Creation of a purchase"
         sale: "Creation of a sale"
         sales_invoice: "Creation of a sales invoice"
+    financial_asset:
+      depreciation_method:
+        # graduated: "Dégressive"
+        # linear: "Linéaire"
+        # simplified_linear: "Linéaire simplifiée"
     immatter: #?
     indicator_datum: #?
     intervention:
@@ -212,11 +217,12 @@ eng:
         year: "Year"
       usage:
         # animals: "Numérotation des animaux"
-        assets: "Numeration of assets"
+        assets: "Numeration of assets" #?
         # campaigns: "Numérotation des campagnes de productions"
         cash_transfers: "Numeration of cash transfers"
         deposits: "Numeration of deposits"
         entities: "Numeration of people"
+        # financial_assets: "Numérotation des immobilisations"
         incoming_deliveries: "Numeration of incoming deliveries"
         incoming_payments: "Numeration of payments"
         outgoing_deliveries: "Numeration of outgoing deliveries"
@@ -228,10 +234,10 @@ eng:
         stock_transfers: "Numeration of stock transfers"
         subscriptions: "Numeration of subscriptions"
         transports: "Numeration of transports"
-    sex:
-      female: "Female"
-      male: "Male"
-      mixt: "Mixte"
+    sex:  #?
+      female: "Female" #?
+      male: "Male" #?
+      mixt: "Mixte" #?
     stock_transfer:  #?
       nature: #?
         gain: "Gain" #?
