Removes useless DepositItem model

--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -426,7 +426,7 @@ eng:
       delay: "Delay" #?
       department: "Department" #?
       deposit: "Deposit"
-      deposit_item: "Deposit line"
+      deposit_item: "Deposit line" #?
       deposit_line: "Deposit line" #?
       district: "District"
       document: "Document"
