--- a/config/locales/fra/help/deposits-index.txt
+++ b/config/locales/fra/help/deposits-index.txt
@@ -1,5 +1,9 @@
 ====== Remises en banque ======
 
+===== Principe =====
+
+Les remises en banques concernent les réglements en attente d'encaissement. Sont concernés les chèques et traites principalement. Les espèces étant directement utilisable est mis en caisse, il n'y a pas à utiliser de remise en banque pour les faire passer en banque. Dans ce dernier cas, vous pouvez effectuer un [[>backend/cash_transfers#new|virement entre votre caisse et votre banque]].
+
 ===== Utilisation =====
 
 Créer une remise de chèque consiste à **sélectionner un ou plusieurs chèques à déposer sur un compte**. Vous pourrez ensuite imprimer le **bordereau de remise de chèques** que vous pourrez envoyer, accompagnés des chèques, directement à votre banque.
