Cleans varieties for demo interventions

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1967,6 +1967,7 @@ eng:
         # herbicide: "Produit herbicide"
         # hordeum: "Orge"
         # hordeum_hibernum: "Orge d’hiver"
+        # hordeum_vernum: "Orge de printemps"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatter"
         # insecta: "Insecte"
@@ -1980,7 +1981,7 @@ eng:
         # levis: "Levis"
         # lona: "Lona"
         # low_protein_brassage_hordeum_hibernum: "Orge d’hiver de brasserie (faible teneur en protéïnes)"
-        # low_protein_spring_hordeum: "Orge de printemps (faible teneur en protéïnes)"
+        # low_protein_hordeum_vernum: "Orge de printemps (faible teneur en protéïnes)"
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manital: "Manital"
@@ -2047,7 +2048,6 @@ eng:
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
         # spreader: "Épandeur"
-        # spring_hordeum: "Orge de printemps"
         # straw: "Pailles"
         # sub_zone: "Sous zone"
         # sus: "Porcin"
@@ -2062,7 +2062,6 @@ eng:
         # tractor: "Tracteur"
         # trailer: "Remorque"
         # tremie: "Tremie"
-        # triticale: "Triticale"
         # triticum_aestivum: "Blé tendre"
         # triticum_durum: "Blé dur"
         # triticum_spelta: "Épeautre"
