--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1849,6 +1849,7 @@ jpn:
         # herbicide: "Produit herbicide"
         # hordeum: "Orge"
         # hordeum_hibernum: "Orge d’hiver"
+        # hordeum_vernum: "Orge de printemps"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         # immatter: "Immatérialisable"
         # insecta: "Insecte"
@@ -1862,7 +1863,7 @@ jpn:
         # levis: "Levis"
         # lona: "Lona"
         # low_protein_brassage_hordeum_hibernum: "Orge d’hiver de brasserie (faible teneur en protéïnes)"
-        # low_protein_spring_hordeum: "Orge de printemps (faible teneur en protéïnes)"
+        # low_protein_hordeum_vernum: "Orge de printemps (faible teneur en protéïnes)"
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manital: "Manital"
@@ -1928,7 +1929,6 @@ jpn:
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
         # spreader: "Épandeur"
-        # spring_hordeum: "Orge de printemps"
         # straw: "Pailles"
         # sub_zone: "Sous zone"
         # sus: "Porcin"
@@ -1943,7 +1943,6 @@ jpn:
         # tractor: "Tracteur"
         # trailer: "Remorque"
         # tremie: "Tremie"
-        # triticale: "Triticale"
         # triticum_aestivum: "Blé tendre"
         # triticum_durum: "Blé dur"
         # triticum_spelta: "Épeautre"
