--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -885,8 +885,11 @@ eng:
     are_you_sure_you_want_to_confirm: "Are you sure you want to order"
     are_you_sure_you_want_to_delete: "Are you sure you want to delete this record?"
     are_you_sure_you_want_to_delete_delivery: "Are you sure you want to remove the delivery of transport?"
+    # are_you_sure_you_want_to_drop_incident: "Êtes-vous sûr(e) de vouloir abandonner cet incident ?"
     are_you_sure_you_want_to_invoice: "Are you sure you want to invoice?"
+    # are_you_sure_you_want_to_reopen_incident: "Êtes-vous sûr(e) de vouloir ré-ouvrir cet incident ?"
     are_you_sure_you_want_to_send_mails: "Are you sure you want to send emails?"
+    # are_you_sure_you_want_to_solve_incident: "Êtes-vous sûr(e) que cet incident est résolu ?"
     # area_measure: "Superficie"
     area_x: "%{name} (%{postcode})"
     # assessable_operations: "Opérations imposables (H.T)"
@@ -1614,6 +1617,7 @@ eng:
     # sowed_at: "Semé le"
     start: "From"
     state: "State"
+    # status: "État"
     # stock: "Stock"
     stock_max: "Stock max"
     stock_min: "Stock min"
@@ -1643,6 +1647,7 @@ eng:
     # supports: "Supports de production"
     synthesis: "Synthesis Documents"
     target: "Target"
+    # target_name: "Nom de la cible"
     # taxes: "Taxes"
     # temperature: "Température"
     theoric_quantity: "Theoric quantity"
