--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -997,8 +997,11 @@ arb:
     are_you_sure_you_want_to_confirm: "هل انت متأكد من رغبتك بالمضي بطلب الشراء؟"
     are_you_sure_you_want_to_delete: "هل انت متاكد من رغبتك بالقيام به؟"
     are_you_sure_you_want_to_delete_delivery: "هل انت متأكد من رغبتك بازالة التسليم من وسائل النقل؟"
+    # are_you_sure_you_want_to_drop_incident: "Êtes-vous sûr(e) de vouloir abandonner cet incident ?"
     are_you_sure_you_want_to_invoice: "هل انت متأكد من رغبتك باعداد فاتورة البيع؟"
+    # are_you_sure_you_want_to_reopen_incident: "Êtes-vous sûr(e) de vouloir ré-ouvrir cet incident ?"
     are_you_sure_you_want_to_send_mails: "هل انت متأكد من رغبتك بارسال الرسالة"
+    # are_you_sure_you_want_to_solve_incident: "Êtes-vous sûr(e) que cet incident est résolu ?"
     area_create: "اضافة عنوان بريدي" #?
     # area_measure: "Superficie"
     area_x: "%{name} (%{postcode})"
@@ -1835,6 +1838,7 @@ arb:
     # sowed_at: "Semé le"
     start: "ابتداء من"
     state: "الحالة"
+    # status: "État"
     # stock: "Stock"
     stock_max: "الحد الاقصى للاسهم"
     stock_min: "الحد الادنى للاسهم"
@@ -1868,6 +1872,7 @@ arb:
     # supports: "Supports de production"
     synthesis: "تجميع الوثائق"
     # target: "Cible"
+    # target_name: "Nom de la cible"
     tax_create: "اضافة ضريبة جديدة" #?
     tax_declaration_create: "اضافة تصريح جديد" #?
     # taxes: "Taxes"
