--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1287,6 +1287,23 @@ jpn:
         uzb: "ウズベク語"
         vie: "ベトナム語（ヴェトナム語）"
       # name: "Langues"
+    nmp_methods:
+      items: #?
+    nmp_poitou_charentes_abacus_1:
+      attributes: #?
+      choices: #?
+      items: #?
+    nmp_poitou_charentes_abacus_2:
+      attributes: #?
+      choices: #?
+      items: #?
+    nmp_poitou_charentes_abacus_3:
+      attributes: #?
+      choices: #?
+      items: #?
+    nmp_poitou_charentes_abacus_4:
+      attributes: #?
+      items: #?
     procedure_natures:
       attributes: #?
       items:
@@ -1799,7 +1816,6 @@ jpn:
         # bioproduct: "Produit vivant"
         # black_valley_soil: "Terres noires de vallées"
         # bos: "Bovin"
-        # brassage_hordeum_hibernum: "Orge d’hiver de brasserie"
         # brassica_napus: "Colza"
         # brassica_nigra: "Moutarde noire"
         # brassica_rapa: "Navet"
@@ -1849,7 +1865,10 @@ jpn:
         # herbicide: "Produit herbicide"
         # hordeum: "Orge"
         # hordeum_hibernum: "Orge d’hiver"
+        # hordeum_hibernum_cerevisiae: "Orge d’hiver de brasserie"
+        # hordeum_hibernum_cerevisiae_hypoproteinae: "Orge d’hiver de brasserie (faible teneur en protéïnes)"
         # hordeum_vernum: "Orge de printemps"
+        # hordeum_vernum_hypoproteinae: "Orge de printemps (faible teneur en protéïnes)"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         # immatter: "Immatérialisable"
         # insecta: "Insecte"
@@ -1862,8 +1881,6 @@ jpn:
         # lepus: "Lagomorphe"
         # levis: "Levis"
         # lona: "Lona"
-        # low_protein_brassage_hordeum_hibernum: "Orge d’hiver de brasserie (faible teneur en protéïnes)"
-        # low_protein_hordeum_vernum: "Orge de printemps (faible teneur en protéïnes)"
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manital: "Manital"
