--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1305,6 +1305,10 @@ spa:
     nmp_poitou_charentes_abacus_4:
       attributes: #?
       items: #?
+    nmp_poitou_charentes_abacus_5:
+      attributes: #?
+      choices: #?
+      items: #?
     procedure_natures:
       attributes: #?
       items:
