--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1386,6 +1386,10 @@ eng:
     nmp_poitou_charentes_abacus_4:
       attributes: #?
       items: #?
+    nmp_poitou_charentes_abacus_5:
+      attributes: #?
+      choices: #?
+      items: #?
     procedure_natures:
       attributes: #?
       items:
