--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1312,6 +1312,9 @@ arb:
       attributes: #?
       choices: #?
       items: #?
+    nmp_poitou_charentes_abacus_6:
+      attributes: #?
+      items: #?
     procedure_natures:
       attributes: #?
       items:
