--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1390,6 +1390,9 @@ eng:
       attributes: #?
       choices: #?
       items: #?
+    nmp_poitou_charentes_abacus_6:
+      attributes: #?
+      items: #?
     procedure_natures:
       attributes: #?
       items:
