--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1314,6 +1314,9 @@ jpn:
       attributes: #?
       choices: #?
       items: #?
+    nmp_poitou_charentes_abacus_6:
+      attributes: #?
+      items: #?
     procedure_natures:
       attributes: #?
       items:
