--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1309,6 +1309,9 @@ spa:
       attributes: #?
       choices: #?
       items: #?
+    nmp_poitou_charentes_abacus_6:
+      attributes: #?
+      items: #?
     procedure_natures:
       attributes: #?
       items:
