--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1318,6 +1318,7 @@ fra:
       trade: "Achats/Ventes"
     merge: "Fusionner"
     meteo: "Météo"
+    method: "Méthode"
     milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
     minimal_temperature: "Température minimale"
     missing_help: "Page inexistante"
