--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1208,6 +1208,7 @@ jpn:
       # trade: "Achats/Ventes"
     # merge: "Fusionner"
     # meteo: "Météo"
+    # method: "Méthode"
     # milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
     # minimal_temperature: "Température minimale"
     missing_help: "無意味なページ"
